--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "leaflet": "^1.9.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
